--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -1,11 +1,11 @@
-# ╭──────╮
-# │ Taps │
-# ╰──────╯
+tap "abhimanyu003/sttr"
 tap "adembc/tap"
 tap "adoptopenjdk/openjdk"
+tap "antoniorodr/cronboard"
 tap "apple/apple", "http://github.com/apple/homebrew-apple"
 tap "asmvik/formulae"
 tap "avasilic/goto"
+tap "bendews/tap"
 tap "bufbuild/buf"
 tap "charmbracelet/tap"
 tap "felixkratz/formulae"
@@ -13,6 +13,7 @@ tap "gcenx/wine"
 tap "get-woke/tap"
 tap "git-chglog/git-chglog"
 tap "go-task/tap"
+tap "gromgit/brewtils"
 tap "hashicorp/tap"
 tap "homebrew-ffmpeg/ffmpeg"
 tap "how2terminal/how2"
@@ -26,22 +27,23 @@ tap "marioschwalbe/gcc-musl-cross"
 tap "mediosz/tap"
 tap "microsoft/git"
 tap "netmute/tap"
+tap "nik-rev/tap"
 tap "nikitabobko/tap"
+tap "noborus/tap"
 tap "optum/tap"
 tap "orangekame3/tap"
+tap "plutov/tap"
 tap "rawnly/tap"
 tap "sikarugir-app/sikarugir"
 tap "synchronal/tap"
 tap "thezoraiz/ascii-image-converter"
 tap "timescam/tap"
 tap "umlx5h/tap"
+tap "unhappychoice/tap"
+tap "valkyrie00/bbrew"
 tap "wader/tap"
 tap "writeme-project/writeme"
 tap "wtfutil/wtfutil"
-
-# ╭──────────╮
-# │ Formulae │
-# ╰──────────╯
 brew "xz"
 brew "jpeg-xl"
 brew "aom"
@@ -81,21 +83,28 @@ brew "cava"
 brew "ccache"
 brew "pycparser"
 brew "cffi"
+brew "harfbuzz"
+brew "libavif"
+brew "pango"
+brew "librsvg"
 brew "chruby"
 brew "clang-format"
 brew "clipboard"
-brew "code-server", restart_service: :changed
 brew "coreutils"
 brew "pcre"
 brew "cppcheck"
 brew "cryptography"
+brew "libyaml"
+brew "ctags-lsp"
 brew "curl"
 brew "diskonaut"
 brew "doggo"
+brew "doxx"
 brew "doxygen"
 brew "gflags"
 brew "glog"
 brew "snappy"
+brew "eget"
 brew "emojify"
 brew "eva"
 brew "eza"
@@ -104,17 +113,15 @@ brew "fclones"
 brew "fd"
 brew "flatbuffers"
 brew "flex"
-brew "harfbuzz"
+brew "fnt"
 brew "libtool"
-brew "pango"
 brew "fontforge"
-brew "fzf"
-brew "forgit"
 brew "fselect"
 brew "fx"
-brew "libavif"
+brew "fzf"
 brew "gdbm"
 brew "gdu"
+brew "gemini-cli"
 brew "gh"
 brew "git"
 brew "git-delta"
@@ -129,24 +136,30 @@ brew "glew"
 brew "glfw"
 brew "glow"
 brew "gnu-sed"
+brew "terminal-notifier"
+brew "gopass"
+brew "gopass-jsonapi"
 brew "gpg-tui"
 brew "gping"
-brew "librsvg"
 brew "graphviz"
+brew "grex"
 brew "grpc"
 brew "grpcurl"
 brew "hadolint"
 brew "hexyl"
 brew "hyperfine"
+brew "imagemagick"
 brew "llvm"
 brew "include-what-you-use"
 brew "irssi"
-brew "libyaml"
 brew "jc"
 brew "jnv"
 brew "jq"
 brew "jsonlint"
+brew "kalker"
+brew "lazydocker"
 brew "lazygit"
+brew "lazysql"
 brew "lcov"
 brew "lefthook"
 brew "libass"
@@ -157,7 +170,6 @@ brew "libpcap"
 brew "libtensorflow"
 brew "linkerd"
 brew "lld"
-brew "lnav"
 brew "lolcat"
 brew "lstr"
 brew "lua-language-server"
@@ -174,6 +186,7 @@ brew "mq"
 brew "nap"
 brew "nasm"
 brew "navi"
+brew "nemu"
 brew "neovim"
 brew "ninja"
 brew "nom"
@@ -182,6 +195,7 @@ brew "onefetch"
 brew "openjdk@11"
 brew "openssl@3.0"
 brew "ossp-uuid"
+brew "ouch"
 brew "pastel"
 brew "perl"
 brew "pinentry-mac"
@@ -198,13 +212,15 @@ brew "runme"
 brew "rustscan"
 brew "sad"
 brew "sdl2"
+brew "serpl"
 brew "shellcheck"
 brew "shfmt"
 brew "spaceship"
 brew "starship"
+brew "switchaudio-osx"
 brew "tag"
 brew "tailspin"
-brew "terminal-notifier"
+brew "termshark"
 brew "terraform"
 brew "the_silver_searcher"
 brew "tidy-viewer"
@@ -219,6 +235,7 @@ brew "vcsh"
 brew "viddy"
 brew "viu"
 brew "vivid"
+brew "w3m"
 brew "watchman"
 brew "watson"
 brew "weechat"
@@ -237,7 +254,9 @@ brew "zenity"
 brew "zoxide"
 brew "zsh-autosuggestions"
 brew "zsh-syntax-highlighting"
+brew "abhimanyu003/sttr/sttr"
 brew "adembc/tap/lazyssh"
+brew "antoniorodr/cronboard/cronboard"
 brew "asmvik/formulae/yabai"
 brew "avasilic/goto/goto-ssh"
 brew "bufbuild/buf/buf"
@@ -245,28 +264,29 @@ brew "charmbracelet/tap/mods"
 brew "charmbracelet/tap/wishlist"
 brew "felixkratz/formulae/borders"
 brew "felixkratz/formulae/sketchybar"
+brew "felixkratz/formulae/svim"
 brew "get-woke/tap/woke"
 brew "git-chglog/git-chglog/git-chglog"
 brew "go-task/tap/go-task"
+brew "gromgit/brewtils/taproom"
 brew "homebrew-ffmpeg/ffmpeg/ffmpeg", args: ["with-fdk-aac"]
 brew "how2terminal/how2/how2"
 brew "jackielii/tap/skhd-zig"
 brew "jorgelbg/tap/pinentry-touchid"
 brew "lintje/lintje/lintje"
 brew "lusingander/tap/serie"
-brew "netmute/tap/ctags-lsp"
+brew "nik-rev/tap/countryfetch"
+brew "noborus/tap/ov"
 brew "orangekame3/tap/ghfetch"
 brew "rawnly/tap/splash-cli"
 brew "synchronal/tap/medic"
 brew "thezoraiz/ascii-image-converter/ascii-image-converter"
 brew "timescam/tap/pay-respects"
 brew "umlx5h/tap/gtrash"
+brew "unhappychoice/tap/gittype"
+brew "valkyrie00/bbrew/bbrew"
 brew "wader/tap/fq"
 brew "writeme-project/writeme/writeme"
-
-# ╭───────╮
-# │ Casks │
-# ╰───────╯
 cask "aerospace"
 cask "blackhole-2ch"
 cask "caprine"
@@ -286,6 +306,7 @@ cask "kitty"
 cask "launchcontrol"
 cask "linearmouse"
 cask "mono-mdk"
+cask "oq"
 cask "rar"
 cask "raycast"
 cask "sikarugir"
@@ -296,27 +317,27 @@ cask "wezterm"
 cask "whisky"
 cask "wine-crossover"
 cask "xquartz"
-
-# ╭────╮
-# │ Go │
-# ╰────╯
 go "cmd/go"
 go "cmd/gofmt"
 go "golang.org/x/tools/gopls"
+go "github.com/ashish0kumar/stormy"
 go "taskfile-language-server"
-
-# ╭───────╮
-# │ Cargo │
-# ╰───────╯
+go "github.com/samyakbardiya/trex"
+go "github.com/mrusme/zeit"
+cargo "basalt-tui"
 cargo "blindfold"
+cargo "bookokrat"
 cargo "chess-tui"
 cargo "dash-create"
+cargo "envex"
 cargo "git-graph"
 cargo "hx"
 cargo "imagecli"
 cargo "jnv"
 cargo "jsonschema-cli"
 cargo "koji"
+cargo "octotype"
+cargo "pik"
 cargo "procx"
 cargo "repgrep"
 cargo "sd"
@@ -326,4 +347,3 @@ cargo "teracli"
 cargo "termusic"
 cargo "termusic-server"
 cargo "tetrs_tui"
-cargo "tmux-sessionizer"
