--- a/conf/git/templates/config
+++ b/conf/git/templates/config
@@ -12,9 +12,6 @@
   addIgnoredFile = false
 [core]
   pager = less
-[credential]
-  helper = 
-  helper = /usr/local/share/gcm-core/git-credential-manager
 [credential "https://dev.azure.com"]
   useHttpPath = true
 [alias]
@@ -26,15 +23,13 @@
   squash-all = "!f(){ git reset $(git commit-tree \"HEAD^{tree}\" \"$@\");};f"
   quick-merge-to-main = "!f(){ current_branch=$(git rev-parse --abbrev-ref HEAD); if [[ $current_branch != "main" ]]; then git checkout main; git merge $current_branch; git checkout $current_branch; fi };f"
 
-[include]
-  path = "~/.catppuccin/delta/catppuccin.gitconfig"
 [interactive]
   diffFilter = delta --color-only --features=interactive
 [delta]
   features = decorations line-numbers side-by-side gruvbox-dark
   navigate = true
   hyperlinks = true
-  hyperlinks-file-link-format = "vscode://file/{path}:{line}"
+  hyperlinks-file-link-format = "editor://file/{path}:{line}"
   minus-style = syntax "#3f0001"
   plus-style = syntax "#003800"
 [delta "decorations"]
